[package]
name = "rupy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
name = "rupy"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
prost = "0.11"
prost-build = "0.11"
pyo3 = "0.16"
pyo3-prost = {path = "../.."}
