[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[project]
name = "rupy"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
